--- a/src/App.css
+++ b/src/App.css
@@ -47,4 +47,27 @@ button {
 
 form {
   padding: 20px;
+  margin: auto;
+  background: white;
+  border-radius: 10px;
+  min-height: 300px;
+  max-width: 400px;
+}
+
+input {
+  font-size: 1.5em;
+  display: block;
+  margin: 20px;
+  border: none;
+  border-bottom: 2px solid var(--primary-color);
+  width: 200px;
+}
+
+input::placeholder {
+  color: var(--faint-grey);
+}
+
+label {
+  display: block;
+  font-size: 1.0em;
 }
