--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,5 +1,16 @@
-.Card {
+.profile {
     background-color: white;
-    width: 800px;
-    height: 600px;
+    width: 300px;
+    height: 500px;
+    margin: auto;
+    margin-bottom: 50px;
+    border-radius: 10px;
+    padding: 10px;
+    padding-top: 30px;
+}
+
+.profile .picture {
+  height: 80px;
+  border-radius: 50%;
+  border: 5px solid var(--prof-border);
 }
