--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,13 +1,14 @@
 .profile {
-    position: relative;
-    background: transparent;
-    width: 300px;
-    height: 500px;
-    margin: auto;
-    margin-bottom: 50px;
-    border-radius: 10px;
-    padding: 10px;
-    padding-top: 30px;
+  position: relative;
+  background: transparent;
+  width: 300px;
+  height: 500px;
+  margin: auto;
+  margin-bottom: 50px;
+  border-radius: 10px;
+  padding: 10px;
+  padding-top: 30px;
+  transition: all 0.2s ease;
 }
 
 .profile .background {
@@ -37,4 +38,12 @@
 .profile .info h1 {
   text-align: left;
   color: white;
+}
+
+.focus {
+  opacity: 1;
+}
+
+.unfocus {
+  opacity: 0.7;
 }
