--- a/src/components/headers/styles/header.css
+++ b/src/components/headers/styles/header.css
@@ -2,11 +2,23 @@
 header {
   background: white;
   text-align: right;
-  padding: 10px;
+  padding: 20px;
+  width: 100%;
 }
 
 header a {
   color: var(--primary-color);
   cursor: pointer;
   margin: 50px;
+  padding: 10px;
+}
+
+header a:hover {
+  border-bottom: 1px solid var(--primary-color);
+}
+
+header img {
+  cursor: pointer;
+  height: 30px;
+  float: left;
 }
