--- a/src/pages/styles/landing-page.css
+++ b/src/pages/styles/landing-page.css
@@ -9,6 +9,18 @@
   float: right;
   font-size: 0.5em;
   cursor: pointer;
+  color: black; 
+  margin-right: 50px;
+  background-color: var(--secondary-color);
+  padding: 10px;
+  border-radius: 20px;
+  box-shadow: 21px 19px 20px -3px rgba(0,0,0,0.76);
+  -webkit-box-shadow: 21px 19px 20px -3px rgba(0,0,0,0.76);
+  -moz-box-shadow: 21px 19px 20px -3px rgba(0,0,0,0.76);
+}
+
+.login-button:hover { 
+  color: white;
 }
 
 
