--- a/src/layouts/layouts.css
+++ b/src/layouts/layouts.css
@@ -4,5 +4,5 @@
   background: var(--primary-color); /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, var(--primary-color), var(--secondary-color));
   background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
-  background: rgba(0, 0, 0, 0);
+  /*background: rgba(0, 0, 0, 0);*/
 }
