--- a/src/components/headers/styles/header.css
+++ b/src/components/headers/styles/header.css
@@ -4,6 +4,11 @@ header {
   text-align: right;
   padding: 20px;
   width: 100%;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
+  z-index: 999999999;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 header a {
