--- a/src/pages/styles/create.css
+++ b/src/pages/styles/create.css
@@ -1,3 +1,6 @@
+.create {
+  background: white;
+}
 
 .extended {
   width: 400px;
@@ -15,9 +18,13 @@
 }
 
 .create .selected {
-  border: 5px solid var(--alert-success);
+  border: 3px solid var(--primary-color);
 }
 
+.create img {
+  border-radius: 10px;
+  border: 3px solid transparent;
+}
 
 .create .select-pic {
   padding: 10px;
