--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@ h1, h2, h3 {
   padding: 0.5em;
 }
 
+button, a {
+  cursor: pointer;
+}
+
 input, button, a, textarea, input[type=text], input[type=password]  {
    font-family: Futura, 'Roboto', sans-serif;
    border-radius: 0px;
