--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ html {
   --light-grey: #DFDFDF;
   --faint-grey: #E5E5E5;
   --dark-grey: #606060;
+  --golf-dust: #FFDC00;
   --card: #e8f0ff;
   --prof-border: #EFEFEF;
   --prof: #F6F7FF;
