--- a/src/components/headers/styles/header.css
+++ b/src/components/headers/styles/header.css
@@ -18,6 +18,19 @@ header a {
   padding: 10px;
 }
 
+header .search {
+  display: inline-block;
+  margin: 0;
+}
+
+header .search-button {
+  margin: 0;
+  padding: 0;
+  border: 1px solid var(--primary-color);
+  border-radius: 5px;
+  padding: 5px;
+}
+
 header a:hover {
   border-bottom: 1px solid var(--primary-color);
 }
